# surface_morphometrics

./: .gitignore  CHANGELOG.md  Install.md  OMM_curvature.py  README.md  _thickness_worker.py  accept_refinement.py  areas.py  calculate_curvature_args.py  config.yml  csv_quantifications.py  curvature.py  curvature_calculation.py  distance_to_edge.py  distances_calculation.py  environment-ubuntu.yml  environment.yml  extract_patches.py  filled_mito.py  filter_csvs.py  generate_patches.py  interdistance_orientation.py  intradistance_verticality.py  label_connected_components.py  make_mesh.py  mask_and_convert_ply.py  masked_curvature.py  masked_curvature_all.py  measure_distances_orientations.py  measure_thickness.py  mitochondria_statistics.py  morphometrics.Singularity  morphometrics_stats.py  mrc2pts.py  mrc2xyz.py  patch_statistics.py  pip_requirements.txt  ply2vtp.py  pyproject.toml  quantifications_documentation.md  (+17 more)
.github/workflows/: tests.yml
docker/: docker-compose.yml  dockerfile  entrypoint.sh  sm-down.sh  sm-up.sh
old_scripts/: IMM_OMM_distance.py  angles.py  areas_custom.py  calculate_curvature_args.py  csv_quantifications.py  label_connected_components.py  load_surface.py  mask_and_convert_ply.py  masked_curvature.py  mitochondria_statistics.py  poisson_curvature.py  surface_to_surface.py  weighted_histogram_from_csv.py
surface_morphometrics/: __init__.py  _thickness_worker.py  accept_refinement.py  cli.py  config_template.yml  config_template_simple.yml  config_utils.py  curvature.py  export_obj.py  extract_patches.py  fetch_example.py  generate_patches.py  interdistance_orientation.py  label_connected_components.py  measure_distances_orientations.py  measure_thickness.py  morphometrics_stats.py  patch_statistics.py  refine_mesh.py  run_pycurv.py  sample_density.py  segmentation_to_meshes.py  single_file_2d.py  single_file_histogram.py  status.py  validate.py
tests/: test_cli_and_fetch.py  test_config_utils.py  test_export_obj.py  test_extract_and_components.py  test_generate_patches.py  test_measure_thickness_helpers.py  test_morphometrics_stats.py  test_mrc2xyz.py  test_patch_statistics.py  test_sample_density.py  test_status.py  test_thickness_worker.py  test_validate.py
tools/: make_example_dataset.py
